Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignIntObjUndefined.quorum
class Main
    action Main
        Integer int
        int = cast(integer, undefined)
        if int = undefined
            output "passed"
        end
    end
end