Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntObjTextField.quorum
class main
    Integer int
    action Main
        int = cast(Integer, "text")
    end
end